--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ html {
   }
 
 body {
+    font-family: "EB Garamond", sans-serif;
     background-color: #1D1C2A;
     color: #fff;
     margin: 0;
@@ -40,6 +41,100 @@ nav ul li a {
     font-size:25px;
     padding: 40;
 }
+
+.container {
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 0 20px;
+    text-align: center;
+}
+
+h1,
+h2,
+h3 { 
+    font-size: 40px;
+    font-weight: bold;
+    padding: 60px;
+    text-align: center;
+}
+
+p{
+    font-size: 25px;
+    text-align: center;
+}
+
+#art img {
+    width: 15%;
+}
+
+#prog img {
+    width: 15%;
+}
+
+.eleve1,
+.eleve2,
+.eleve3 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.eleve2{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+.eleve2 img {
+    padding-right: 30px;
+}
+
+
+#formulaire form {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+#formulaire input[type="email"] {
+    width: 300px;
+    padding: 10px;
+    border: 2px solid #906FC9;
+    border-radius: 5px 0 0 5px;   
+    background-color: #1D1C2A;
+    color: #fff;
+    font-family: "EB Garamond", sans-serif;
+    font-size: 16px;
+    border-right: none;  
+}
+
+#formulaire button {
+    padding: 0 20px;
+    background-color: #906FC9;
+    color: #fff;
+    font-family: "EB Garamond", sans-serif;
+    font-size: 25px;
+    border: 2px solid #906FC9;
+    border-radius: 0 5px 5px 0;
+    transition: background-color .3s ease-in-out; 
+}
+
+#formulaire button:hover {
+    background-color: #1D1C2A;
+    cursor: pointer;  
+}
+
+#formulaire input:focus {
+    outline: none;
+}
+
+
+footer img {
+    margin-top: 70px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 2.5%;
+}
+
 
 .button{
 
