--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ header img {
     border-radius: 50%;
 }
 
+.menu-bouton{
+    display: none;
+}
+
 nav ul {
     width: 100%;
     padding: 0;
@@ -125,7 +129,7 @@ p{
 }
 
 #armure img{
-    width: 250%;
+    width: 50%;
 }
 
 #armure p{
@@ -183,6 +187,10 @@ p{
 #persos img{
     width: 100%;
     justify-content: space-evenly;  
+}
+
+#persos img:hover{
+    width: 120%;
 }
 
 #persos-texte{
@@ -316,4 +324,81 @@ footer img {
     background-image: url('/img/hover.jpg');
 
 }
-/*------------------------------------------------------*/
+
+/* Adaptation Mobile */
+
+@media screen and (max-width: 768px){
+    header{
+        display: flex;
+        height: 10vh;
+        justify-content: space-between;
+        align-items: center;
+      }
+      
+
+    .menu-bouton{
+        display: block;
+        background: transparent;
+        border: none;
+        color: white;
+        cursor: pointer;
+        z-index: 999;
+      }
+
+      #nav-menu{
+        display: none;
+        position: absolute;
+        background-color: #5D6A8E;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+      }
+
+    #nav-menu.menu-open{
+        display: block;
+      }
+
+
+    #nav-menu ul{
+        flex-direction: column;
+        height: 100%;
+    }
+
+    p{
+        font-size: 3vw;
+    }
+
+    h1{
+        font-size: 3em;
+    }
+
+
+    .button{
+        font-size: 1.4em;
+        margin-left: 2vw;
+        margin-right: 2vw;
+        margin-top: 35px;
+
+    }
+
+    #armure img{
+        width: 40vw;
+    }
+
+    #cartes img{
+        width: 40vw;
+    }
+
+    /*transition cartes plateau*/
+    
+    #plateau div{
+        height: 30vw;
+        margin: 1.5%;
+    }
+
+    #plateau p{
+        font-size: 1.2em;
+    }
+
+}
