--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,8 @@ nav ul li a {
 
 h1,
 h2,
-h3 { 
+h3,
+h4 { 
     font-size: 40px;
     font-weight: bold;
     padding: 60px;
@@ -109,7 +110,8 @@ p{
     justify-content: space-between;
     margin-left: 80px;
     margin-right: 80px;
-    margin-top: 35px;
+    margin-top: 100px;
+    margin-bottom: 50px;
     border: 2px solid #906FC9;
     border-radius: 5px 5px 5px 5px;
     transition: background-color .3s ease-in-out; 
@@ -124,12 +126,13 @@ p{
 #armure{
     display: flex;
     justify-content: space-evenly;
-    margin-top: 100px;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 #armure img{
-    width: 50%;
+    width: 250%;
 }
 
 #armure p{
@@ -141,8 +144,8 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 #cartes img{
@@ -158,7 +161,6 @@ p{
 
 #plateau div{
     width: 100%;
-    height: 400px;
     padding: 20px;
     margin: 20px 20px 0 20px;
 }
@@ -166,7 +168,7 @@ p{
 #plateau-images{
     display: flex;
     position: relative;
-    margin-top: 60px;
+    height: 450px;
     padding-left: 80px;
     padding-right: 80px;
 }
@@ -182,6 +184,7 @@ p{
 #persos{
     display: flex;
     position: relative;
+    margin-top: 50px;
 }
 
 #persos img{
@@ -199,6 +202,11 @@ p{
 
 /*PAGE DE CONTACT*/
 
+#presentation p {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
 #art img {
     width: 15%;
     border-radius: 50%;
@@ -207,6 +215,7 @@ p{
 #prog img {
     width: 15%;
     border-radius: 50%;
+    margin-bottom: 20px;
 }
 
 .eleve1,
@@ -216,6 +225,8 @@ p{
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .eleve2{
@@ -231,7 +242,7 @@ p{
 /*BOUTON INSCRIPTION*/
 
 #formulaire form {
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
 }
@@ -270,11 +281,15 @@ p{
 
 /*FOOTER*/
 
+footer {
+    background-color: #5D6A8E;
+    margin-top: 100px;
+    text-align: center;
+}
+
 footer img {
-    margin-top: 70px;
-    margin-left: 10px;
-    margin-right: 10px;
-    width: 2.5%;
+    width: 1.25%;
+    margin: 7px 10px 7px 10px;
 }
 
 
@@ -378,7 +393,7 @@ footer img {
         font-size: 1.4em;
         margin-left: 2vw;
         margin-right: 2vw;
-        margin-top: 35px;
+        margin-top: 100px;
 
     }
 
