--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ p{
     display: flex;
     position: relative;
     height: 450px;
+    margin-top: 60px;
     padding-left: 80px;
     padding-right: 80px;
 }
@@ -230,14 +231,13 @@ p{
 }
 
 .eleve2{
-    margin-top: 70px;
-    display: flex;
     justify-content: center;
-    width: 115%;
 }
-.eleve2 img {
-    padding-right: 30px;
+
+.eleve2 p{
+    margin-left: 30px;
 }
+
 
 /*BOUTON INSCRIPTION*/
 
@@ -397,6 +397,8 @@ footer img {
 
     }
 
+    /*---Page Accueil---*/
+
     #armure img{
         width: 40vw;
     }
@@ -415,5 +417,35 @@ footer img {
     #plateau p{
         font-size: 1.2em;
     }
+
+    /*---Page Contact---*/
+
+    .eleve1,
+    .eleve2,
+    .eleve3 {
+        flex-direction: column;
+    }
+
+    .eleve1 p,
+    .eleve2 p,
+    .eleve3 p{
+        margin-left: 0%;
+        padding-top: 5%;
+    }
+
+    #art img {
+        width: 30%;
+        margin-top: 5vh;
+    }
+    
+    #prog img {
+        width: 30%;
+        margin-top: 5vh;
+    }
+
+        
+
+
+    
 
 }
