--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,12 @@ header img {
     border-radius: 50%;
 }
 
-.menu-bouton{
+.menu-btn{
     display: none;
 }
 
 nav ul {
     width: 100%;
-    padding: 0;
     gap: 20px;
     display: flex;
     align-items: center;
@@ -132,7 +131,7 @@ p{
 }
 
 #armure img{
-    width: 250%;
+    width: 50%; /*Firefox : 250%*/
 }
 
 #armure p{
@@ -371,20 +370,21 @@ footer img {
 @media screen and (max-width: 768px){
     header{
         display: flex;
-        height: 10vh;
         justify-content: space-between;
         align-items: center;
       }
       
 
-    .menu-bouton{
+    .menu-btn{
         display: block;
         background: transparent;
+        color: #DDE9EF;
         border: none;
-        color: white;
+        font-size: 1.4em;
         cursor: pointer;
         z-index: 999;
-      }
+
+    }
 
       #nav-menu{
         display: none;
@@ -402,8 +402,18 @@ footer img {
 
 
     #nav-menu ul{
+        justify-content: center;
         flex-direction: column;
         height: 100%;
+    }
+
+    #nav-menu ul li a{
+        padding: 0;
+    }
+
+
+    #nav-menu img{
+        display: none;
     }
 
     p{
@@ -414,14 +424,14 @@ footer img {
         font-size: 3em;
     }
 
-
     .button{
         font-size: 1.4em;
         margin-left: 2vw;
         margin-right: 2vw;
-        margin-top: 100px;
+        margin-top: 35px;
 
     }
+
 
     /*---Page Accueil---*/
 
@@ -469,9 +479,8 @@ footer img {
         margin-top: 5vh;
     }
 
+    footer img{
+        width: 3vh;
+    }
         
-
-
-    
-
 }
