--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ p{
 }
 
 #armure img{
-    width: 150%; /*Firefox : 250%*/
+    width: 450px; /*Firefox : 150%, Opera et Chrome : 450px*/
 }
 
 #armure p{
@@ -144,13 +144,11 @@ p{
 }
 
 #cartes img{
-    width: 40%;
+    width: 70%;
+    margin: 10px;
 }
 
 #cartes p {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
     margin-left: 30px;
 }
 
