--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,10 @@ p{
     text-align: center, justify;
 }
 
-.video {
+video {
     position: relative;
     width: 100%;
-    padding-bottom: 56.25%; /* 16:9 */
-    margin: 40px 0;
+    box-shadow: #5D6A8E 0px 0px 0px 10px, #ffffff60 0px 0px 10px 20px;
 }
 
 .video iframe {
@@ -92,6 +91,7 @@ p{
     left: 0;
     width: 100%;
     height: 100%;
+    
 }  
 
 /*Adapte les 3 boutons de redirection et celui d'achat*/
@@ -164,7 +164,6 @@ p{
     position: relative;
     height: 450px;
     margin-top: 60px;
-
     padding-right: 80px;
 }
 
